--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="twitter:title" content="Study with Miku - 和初音未来一起学习">
     <meta name="twitter:description" content="沉浸式学习陪伴网站，提供番茄钟、背景音乐播放等功能。">
     <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#39c5bb">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
